fix link in faq

--- a/app/assets/scss/4-pages/_faq.scss
+++ b/app/assets/scss/4-pages/_faq.scss
@@ -57,13 +57,17 @@
 
       .grid-container {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 30px;
-        padding: 0 120px;
+        max-width: 1200px;
+        margin: auto;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        grid-template-rows: repeat(4, minmax(120px, 1fr));
+        grid-gap: 28px;
         transition: all 0.3s;
 
         @media #{$sp} {
-          display: block;
+          grid-template-columns: auto;
+          grid-template-rows: repeat(11, 1fr);
+          grid-gap: 15px;
           width: 100%;
           padding: 0 20px;
         }
@@ -74,15 +78,23 @@
           background: #444444;
           position: relative;
 
-          a {
+          &:hover {
+            img {
+              bottom: 9%;
+            }
+          }
+
+          .grid-item__detail {
             width: 100%;
-            padding: 50px 30px;
-            transition: all 0.3s;
-            &:hover {
-              opacity: 1;
-              img {
-                bottom: 15%;
-              }
+            height: 100%;
+            padding: 30px 27px 10px;
+            transition: transform 5s ease, bottom 5s ease;
+            align-items: center;
+            display: flex;
+            justify-content: center;
+
+            @media #{$sp} {
+              padding: 30px 15px;
             }
           }
 
@@ -92,18 +104,19 @@
             letter-spacing: 0px;
             color: #ffffff;
             opacity: 1;
-            white-space: nowrap;
+            margin-bottom: 15px;
+            // white-space: nowrap;
           }
 
           img {
             position: absolute;
-            bottom: 20%;
+            bottom: 12%;
             width: 10px;
             height: 10px;
           }
 
           @media #{$sp} {
-            margin-bottom: 10px;
+            margin-bottom: 0px;
           }
         }
       }
