--- a/app/pages/faq/index.njk
+++ b/app/pages/faq/index.njk
@@ -10,10 +10,10 @@
 
 {# Breadcrumb #}
 {% set breadcrumb = [
-  {
-    text: "よくある質問",
-    link: "#"
-  }
+{
+text: "よくある質問",
+link: "#"
+}
 ] %}
 
 {# Custom tags before </head> #}
@@ -39,54 +39,82 @@
     </div>
     <div class="search-block">
       <div class="grid-container">
-        <div class="grid-item">
-          <a href="#">
-            <p class="grid-item__title">個人与信型ビジネスカード</p>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/platinum.html">
+          <div class="grid-item__detail">
+            <p class="grid-item__title">
+              セゾンプラチナ・ビジネス プロ・アメリカン・
+              エキスプレス®・カード
+            </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
-            <p class="grid-item__title">法人与信型ビジネスカード</p>
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/gold.html">
+          <div class="grid-item__detail">
+            <p class="grid-item__title">セゾンゴールド・ビジネスプロ・カード</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/purchasing.html">
+          <div class="grid-item__detail">
+            <p class="grid-item__title">
+              セゾン・アメリカン・エキスプレス®・ビジネス プロ・パーチェシング・カード
+            </p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/sbs.html">
+          <div class="grid-item__detail">
+            <p class="grid-item__title">
+              セゾンプラチナ・ビジネス・アメリカン・エキスプレス®・カードリンク
+            </p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/cobalt.html">
+          <div class="grid-item__detail">
+            <p class="grid-item__title">
+              セゾンコバルト・ビジネス・アメリカン・
+              エキスプレス®・カード
+            </p>
+            <img src="/assets/img/common/arrow-down.svg">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/shi-harai.html">
+          <div class="grid-item__detail">
             <p class="grid-item__title">支払い.com</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/saison-invoice.html">
+          <div class="grid-item__detail">
             <p class="grid-item__title">セゾンインボイス </p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/fukurico.html">
+          <div class="grid-item__detail">
             <p class="grid-item__title">セゾンフクリコ</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/business_support_loan.html">
+          <div class="grid-item__detail">
             <p class="grid-item__title">ビジネスサポートローン</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/concur_expense.html">
+          <div class="grid-item__detail">
             <p class="grid-item__title">Concur Expense</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
-        <div class="grid-item">
-          <a href="#">
+          </div>
+        </a>
+        <a class="grid-item" href="https://c23071138747.hmup.jp/faq/cospro.html">
+          <div class="grid-item__detail">
             <p class="grid-item__title">CosPro</p>
             <img src="/assets/img/common/arrow-down.svg">
-          </a>
-        </div>
+          </div>
+        </a>
       </div>
     </div>
   </section>
@@ -120,7 +148,7 @@
               <summary class="card__box">
                 <div class="card__box--ttl">ご相談・お問い合わせはこちら</div>
                 <div class="card__box--txt">中小企業や個人事業主のよくある課題に対して解決のヒントに<br>
-                なる資料を無料でご提供しています。ぜひご活用ください。
+                  なる資料を無料でご提供しています。ぜひご活用ください。
                 </div>
                 <div><a class="blue_gradient_btn" href="/contact/">お気軽にお問い合わせください。</a></div>
               </summary>
