--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -647,7 +647,7 @@ link: "/business_card_creation/"
                 <div class="modaal-content modaal-focus">
                   <div class="modaal-content-container">
                     <div id="js-comparison-modal" class="modal-contents">
-                      <div class="modal-cont row js-comparison-modal">
+                      <div class="modal-cont comparison-row js-comparison-modal">
                         <span class="free_box"></span>
                         <table class="comparison_table">
                           <thead>
@@ -728,12 +728,12 @@ link: "/business_card_creation/"
                           </thead>
                           <tbody>
                             <tr class="comparison_dt">
-                              <td class="row-0">特長</td>
-                              <td class="row-1">代表者／本会員年会費</td>
-                              <td class="row-2">追加カード年会費</td>
-                              <td class="row-3">カード発行枚数</td>
-                              <td class="row-4">申し込み資格</td>
-                              <td class="row-5">MORE</td>
+                              <td class="comparison-row-0">特長</td>
+                              <td class="comparison-row-1">代表者／本会員年会費</td>
+                              <td class="comparison-row-2">追加カード年会費</td>
+                              <td class="comparison-row-3">カード発行枚数</td>
+                              <td class="comparison-row-4">申し込み資格</td>
+                              <td class="comparison-row-5">MORE</td>
                             </tr>
                             <tr class="select-sbs_pro comparison_item">
                               <td class="row-0">
@@ -744,11 +744,11 @@ link: "/business_card_creation/"
                                   <li>・海外最高1億円、国内最高5,000万円の旅行傷害保険</li>
                                 </ul>
                               </td>
-                              <td class="row-1">27,500円（税込）</td>
-                              <td class="row-2">3,300円（税込）</td>
-                              <td class="row-3">100枚（代表者カード含）</td>
-                              <td class="row-4">中小規模法人代表者（未成年者除く）</td>
-                              <td class="row-5">
+                              <td class="comparison-row-1">27,500円（税込）</td>
+                              <td class="comparison-row-2">3,300円（税込）</td>
+                              <td class="comparison-row-3">100枚（代表者カード含）</td>
+                              <td class="comparison-row-4">中小規模法人代表者（未成年者除く）</td>
+                              <td class="comparison-row-5">
                                 <ul class="txt">
                                   <li>・プラチナ会員専用デスク</li>
                                   <li>・AMEXセンチュリオンデザイン採用</li>
@@ -757,7 +757,7 @@ link: "/business_card_creation/"
                               </td>
                             </tr>
                             <tr class="select-business_gold comparison_item">
-                              <td class="row-0">
+                              <td class="comparison-row-0">
                                 <ul class="txt">
                                   <li>・ゴールドカード</li>
                                   <li>・キャッシュバック率 0.5％<sup>※1</sup></li>
@@ -765,29 +765,29 @@ link: "/business_card_creation/"
                                   <li>・海外最高5,000万円、国内最高5,000万円の旅行傷害保険</li>
                                 </ul>
                               </td>
-                              <td class="row-1">3,300円（税込）</td>
-                              <td class="row-2">1,100円（税込）</td>
-                              <td class="row-3">100枚（代表者カード含）</td>
-                              <td class="row-4">中小規模法人代表者（未成年者除く）</td>
-                              <td class="row-5">
+                              <td class="comparison-row-1">3,300円（税込）</td>
+                              <td class="comparison-row-2">1,100円（税込）</td>
+                              <td class="comparison-row-3">100枚（代表者カード含）</td>
+                              <td class="comparison-row-4">中小規模法人代表者（未成年者除く）</td>
+                              <td class="comparison-row-5">
                                 <ul class="txt">
                                   <li>・国内ラウンジサービス</li>
                                 </ul>
                               </td>
                             </tr>
                             <tr class="select-purchasing comparison_item">
-                              <td class="row-0">
+                              <td class="comparison-row-0">
                                 <ul class="txt">
                                   <li>・カードの発行なし</li>
                                   <li>・キャッシュバック率 0.5％<sup>※1</sup></li>
                                   <li>・支払いサイト 最長84日間<br>＋キャッシュバック率0.25％<sup>※1</sup></li>
                                 </ul>
                               </td>
-                              <td class="row-1">11,000円（税込）</td>
-                              <td class="row-2">1,100円（税込）</td>
-                              <td class="row-3">100枚（代表者カード含）</td>
-                              <td class="row-4">中小規模法人代表者（未成年者除く）</td>
-                              <td class="row-5">
+                              <td class="comparison-row-1">11,000円（税込）</td>
+                              <td class="comparison-row-2">1,100円（税込）</td>
+                              <td class="comparison-row-3">100枚（代表者カード含）</td>
+                              <td class="comparison-row-4">中小規模法人代表者（未成年者除く）</td>
+                              <td class="comparison-row-5">
                                 <ul class="txt">
                                   <li>・部署名・費用項目名での発番可能</li>
                                 </ul>
@@ -801,13 +801,13 @@ link: "/business_card_creation/"
                                   <li>・海外最高1億円、国内最高5,000万円の旅行傷害保険</li>
                                 </ul>
                               </td>
-                              <td class="row-1">22,000円（税込）<span
+                              <td class="comparison-row-1">22,000円（税込）<span
                                   class="small">※年間200万円以上のショッピングのご利用で、次年度本会員年会費11,000円（税込）</span><br><span
                                   class="small red">初年度年会費無料</span></td>
-                              <td class="row-2">3,300円（税込）</td>
-                              <td class="row-3">10枚（本カード含）</td>
-                              <td class="row-4">個人事業主または経営者の方（学生、未成年を除く）</td>
-                              <td class="row-5">
+                              <td class="comparison-row-2">3,300円（税込）</td>
+                              <td class="comparison-row-3">10枚（本カード含）</td>
+                              <td class="comparison-row-4">個人事業主または経営者の方（学生、未成年を除く）</td>
+                              <td class="comparison-row-5">
                                 <ul class="txt">
                                   <li>・プラチナ会員専用デスク</li>
                                   <li>・AMEXセンチュリオンデザイン採用</li>
@@ -816,17 +816,17 @@ link: "/business_card_creation/"
                               </td>
                             </tr>
                             <tr class="select-cobalt comparison_item">
-                              <td class="row-0">
+                              <td class="comparison-row-0">
                                 <ul class="txt">
                                   <li>・永久不滅ポイント 海外2倍/特定加盟店4倍</li>
                                   <li>・追加カード年会費永年無料</li>
                                 </ul>
                               </td>
-                              <td class="row-1"><span class="red bold">永年無料</span></td>
-                              <td class="row-2"><span class="red bold">永年無料</span></td>
-                              <td class="row-3">10枚（本カード含）</td>
-                              <td class="row-4">個人事業主またはフリーランス、経営者の方（高校生を除く）</td>
-                              <td class="row-5">
+                              <td class="comparison-row-1"><span class="red bold">永年無料</span></td>
+                              <td class="comparison-row-2"><span class="red bold">永年無料</span></td>
+                              <td class="comparison-row-3">10枚（本カード含）</td>
+                              <td class="comparison-row-4">個人事業主またはフリーランス、経営者の方（高校生を除く）</td>
+                              <td class="comparison-row-5">
                                 <ul class="txt">
                                   <li>・AMEXセンチュリオンデザイン採用</li>
                                 </ul>
