--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -58,8 +58,11 @@
         {% for i in range(0, 11) %}
           <div class="QA__content">
             <div class="question__content" >
-              <div class="QA__content-head">Q.</div>
-              <div class="QA__content-content" style="color:#0497b5;">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
+              <div class="question__title">
+                <div class="QA__content-head">Q.</div>
+                <div class="QA__content-content" style="color:#0497b5;">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
+              </div>
+              
               <div id="arrow-icon" class="QA__content-icon">
                 {% include "component/icons/arrow.njk" %}
               </div>
