--- a/app/pages/whitepaper/index.njk
+++ b/app/pages/whitepaper/index.njk
@@ -47,7 +47,9 @@ link:"#"
       <div class="whitepaper__section__cards">
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="/whitepaper/bussinesscard01.html">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <div class="grid__card--content">
             <div class="content__description">
@@ -66,7 +68,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="/whitepaper/shi-harai.html">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <div class="grid__card--content">
             <div class="content__description">
@@ -92,7 +96,9 @@ link:"#"
       <div class="grid__card--container">
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="/whitepaper/saison-invoice01.html">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -109,7 +115,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="/whitepaper/fukurico01.html">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -126,7 +134,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="/whitepaper/business_support_loan01.html">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -143,7 +153,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="#">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -160,7 +172,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="#">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -177,7 +191,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="#">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -194,7 +210,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="#">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -211,7 +229,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="#">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
@@ -228,7 +248,9 @@ link:"#"
 
         <div class="grid__card">
           <div class="grid__card--img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <a href="#">
+              <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            </a>
           </div>
           <h5 class="ttl-quinary">
             <label class="custom-checkbox flex fS aifS">
