remove arrow down in faq page

--- a/app/pages/faq_service_list/index.njk
+++ b/app/pages/faq_service_list/index.njk
@@ -60,7 +60,7 @@
             <div class="question__content" >
               <div class="question__title">
                 <div class="QA__content-head">Q.</div>
-                <div class="QA__content-content" style="color:#0497b5;">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
+                <div class="QA__content-content" style="color:#0497b5;">質問内容が入ります。</div>
               </div>
               
               <div id="arrow-icon" class="QA__content-icon">
@@ -69,7 +69,7 @@
             </div>
             <div class="answer__content">
               <div class="QA__content-head">A.</div>
-              <div class="QA__content-content">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
+              <div class="QA__content-content">質問内容が入ります。質問内容が入ります。質問内容が入ります。質問内容が入ります。</div>
             </div>
           </div>
         {% endfor %}
