--- a/app/_template/partial/qa_section.njk
+++ b/app/_template/partial/qa_section.njk
@@ -1,6 +1,6 @@
 <div class="container qa-list">
   {% for i in range(0, 11) %}
-  <div class="qa {% if i > 5 %}hidden-qa{% endif %}">
+  <div class="qa">
     <div class="flex gap20 question-tab">
       <div class="qa-marker">
         <h2 class="ttl-secondary">Q</h2>
@@ -28,7 +28,7 @@
   </div>
   {% endfor %}
 </div>
-<a class="bondi_blue_outline_btn show-more-button">
+<a href="/faq_service_list/" class="bondi_blue_outline_btn show-more-button">
   <span class="bondi_blue_outline_btn__tittle">
     もっと見る
   </span>
