--- a/app/pages/catalog_list/index.njk
+++ b/app/pages/catalog_list/index.njk
@@ -43,10 +43,12 @@ link:"news_list"
           </label>
 
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="/catalog_detail/shi-harai.html">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -58,10 +60,12 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="/catalog_detail/fukurico.html">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -73,10 +77,12 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="/catalog_detail/saison_invoice_wp.html">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -88,10 +94,12 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="/catalog_detail/cospro.html">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -103,10 +111,12 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="#">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -118,10 +128,12 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="#">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -133,10 +145,12 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="#">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -148,10 +162,12 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="#">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
         <div class="list-item">
           <div class="item-thumbnail">
@@ -164,10 +180,12 @@ link:"news_list"
             <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
           </div>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <div class="item-button">
-            <div class="button-name">この資料をダウンロードする</div>
-            <div class="button-icon"></div>
-          </div>
+          <a href="#">
+            <div class="item-button">
+              <div class="button-name">この資料をダウンロードする</div>
+              <div class="button-icon"></div>
+            </div>
+          </a>
         </div>
       </div>
     </div>
