--- a/app/assets/scss/4-pages/_catalog_list.scss
+++ b/app/assets/scss/4-pages/_catalog_list.scss
@@ -165,7 +165,7 @@
             text-overflow: ellipsis;
             word-break: break-word;
           }
-          a {
+          .button-link {
             width: 100%;
             .item-button {
               margin: 20px auto;
