--- a/app/pages/catalog_list/index.njk
+++ b/app/pages/catalog_list/index.njk
@@ -43,7 +43,7 @@ link:"news_list"
           </label>
 
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="/catalog_detail/shi-harai.html">
+          <a href="/catalog_detail/shi-harai.html" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -60,7 +60,7 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="/catalog_detail/fukurico.html">
+          <a href="/catalog_detail/fukurico.html" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -77,7 +77,7 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="/catalog_detail/saison_invoice_wp.html">
+          <a href="/catalog_detail/saison_invoice_wp.html" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -94,7 +94,7 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="/catalog_detail/cospro.html">
+          <a href="/catalog_detail/cospro.html" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -111,7 +111,7 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="#">
+          <a href="#" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -128,7 +128,7 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="#">
+          <a href="#" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -145,7 +145,7 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="#">
+          <a href="#" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -162,7 +162,7 @@ link:"news_list"
             <span class="custom-check-box-label checkbox-label">サービス名入ります。</span>
           </label>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="#">
+          <a href="#" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
@@ -180,7 +180,7 @@ link:"news_list"
             <label class="checkbox-label" for="checkbox">サービス名入ります。</label>
           </div>
           <div class="item-description">資料の紹介文が入ります。資料の紹介文が入ります。資料の紹介文が入ります。資料</div>
-          <a href="#">
+          <a href="#" class="button-link">
             <div class="item-button">
               <div class="button-name">この資料をダウンロードする</div>
               <div class="button-icon"></div>
