--- a/app/pages/sole_proprietorship/index.njk
+++ b/app/pages/sole_proprietorship/index.njk
@@ -345,7 +345,7 @@
         <div class="containers">
           <ul class="inherit card-list">
             <div class="card-type10">
-              <a href="#" class="card-type10-container">
+              <div class="card-type10-container">
                 <div class="flex fS grid__card--cat">
                   <span class="cat">ビジネスカード</span>
                 </div>
@@ -355,10 +355,10 @@
                   ビジネスカードを探していたのですが、どのカードが自分に合うのかが分からず迷っていました。そこで、自身がビジネスカードに求める事項が備わっているか・・
                 </h6>
                 <div class="bondi_blue_outline_btn">インタビューの続きを見る</div >
-              </a>
+              </div>
             </div>
             <div class="card-type10">
-              <a href="#" class="card-type10-container">
+              <div class="card-type10-container">
                 <div class="flex fS grid__card--cat">
                   <span class="cat">支払い.com</span>
                 </div>
@@ -369,7 +369,7 @@
                 <h6 class="ttl-senary">
                   月末の職人への支払いに迫られ本当に困っていましたが、圧倒的に簡単に振込が完了し、手数料も安かったので大変助かりました。また利用させていただきます。
                 </h6>
-              </a>
+              </div>
             </div>
           </ul>
         </div>
